+ es:, it: <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -5,11 +5,14 @@
 # said when meeting somebody for the first time in the morning
 
 ====Translations====
+
 *Dutch: [[goeiemorgen]]
+*{{es}}: [[buenas dias]]
 *French: [[bonjour]]
 *German: [[Guten Morgen]]
 *Hebrew: [[בוקר טוב]] (boker tov)
 *{{hi}}: [[नमस्ते]] (to one person), [[नमस्कार]] (to several persons)
+*{{it}}: [[buongiorno]]
 *Japanese: (ohayo gozaimasu)
 
 [[Category:Phrasebook]]
