--- a/wiki/acquiesce.wikitext
+++ b/wiki/acquiesce.wikitext
@@ -10,7 +10,7 @@ IPA: [[WEAE]] /ˌæ.kwiˈɛs/
 #To rest satisfied, or apparently satisfied, or to rest  without opposition and discontent (usually implying  previous opposition or discontent); to accept or consent  by silence or by omitting to object; &mdash; followed by in, formerly also by with and to.
 #:They were compelled to '''acquiesce''' in a government which they did not regard as just. - [[Thomas De Quincey]].
 #To concur upon conviction; as, to acquiesce in an opinion; to assent to; usually, to concur, not heartily but so far  as to forbear opposition.
-#:I may be forced to '''acquiesce''' in these recent developments, but I can hardly be expected to make merry over them. &mdash;  - [[Wikisource:Author:Arthur Conan Doyle|Arthur Conan Doyle]], ''[[Wikisource:The Adventure of the Speckled Band|The Adventure of the Speckled Band]]''
+#:I may be forced to '''acquiesce''' in these recent developments, but I can hardly be expected to make merry over them. - [[Wikisource:Author:Arthur Conan Doyle|Arthur Conan Doyle]], ''[[Wikisource:The Adventure of the Speckled Band|The Adventure of the Speckled Band]]''
 
 ====Synonyms====
-To [submit]]; [[comply]]; [[yield]]; [[assent]]; [[agree]]; [[consent]]; [[accede]]; [[concur]]; [[conform]]; [[accept]] [[tacitly]].
+To [[submit]]; [[comply]]; [[yield]]; [[assent]]; [[agree]]; [[consent]]; [[accede]]; [[concur]]; [[conform]]; [[accept]] [[tacitly]].
