--- a/wiki/acquiescence.wikitext
+++ b/wiki/acquiescence.wikitext
@@ -1,3 +1,8 @@
-A submission to concent.
-
-Noun form of [[acquiesce]].
+==English==
+===Etymology===
+Compare French ''acquiescence''
+===Noun===
+#A silent or passive assent or submission, or a submission with apparent content; -- distinguished from avowed consent on the one hand, and on the other, from opposition or open discontent; quiet satisfaction.
+#''(Criminal Law):''
+##Submission to an injury by the party injured
+##Tacit concurrence in the action of another.  - [[Wharton?]]
