--- a/wiki/happy_New_Year.wikitext
+++ b/wiki/happy_New_Year.wikitext
@@ -1,11 +1,18 @@
+
 === Etymology ===
+
 [[happy]] + [[New Year]]
+
 === Wish ===
+
 '''Happy New Year''' ''or'' '''Happy New Year!'''
 # a wish said at the start of a New Year
+
 ==== Translations ====
+
 *Estonian: [[head uut aastat]]
 *Finnish: [[hyvää uutta vuotta]]
+*{{fr}}: [[Bonne année]]
 *German: [[Ein fröhliches neues Jahr]], [[Ein gutes neues Jahr]], [[Fröhliches neues Jahr]], [[Guten Rutsch]], [[Guten Rutsch ins neue Jahr]], [[Gutes neues Jahr]]
 *Japanese: [[明けましておめでとう]] (akemashite omedetou)
 *Norwegian: [[Godt nyttår]]
@@ -15,6 +22,7 @@
 *Vietnamese: [[Chức mừng năm mới]]
 
 === See Also ===
+
 * [[New Year]]
 
 [[Category:Phrasebook]]
