French: [[je ne pense pas]], [[je ne crois pas]] <I don't think so#55926>

--- a/wiki/I_don%27t_think_so.wikitext
+++ b/wiki/I_don%27t_think_so.wikitext
@@ -28,7 +28,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--right column-->
-*French: [[je pense que non]], [[je crois que non]]
+*French: [[je ne pense pas]], [[je ne crois pas]]
 *Italian: [[penso di no]]
 *Spanish: [[pienso que no]]
 |}
