--- a/wiki/I_think_so.wikitext
+++ b/wiki/I_think_so.wikitext
@@ -7,6 +7,6 @@
 *:[[Ik denk het wel]] /[[media:Ik_denk_het_wel.ogg|ɪk dɛŋk hət wɛl]]/
 *:[[Ik denk van wel]] /[[media:Ik_denk_van_wel.ogg|ɪk dɛŋk van wɛl]]/
 *{{es}}: [[Pienso que sí]]
-*{{fr}}: [[je le pense]]
+*{{fr}}: [[je le pense]], [[je pense que oui]]
 
 [[Category:Phrasebook]]
