{{fr}}: [[Va-t-il pleuvoir ?]] <is it going to rain#55924>

--- a/wiki/is_it_going_to_rain.wikitext
+++ b/wiki/is_it_going_to_rain.wikitext
@@ -3,6 +3,8 @@
 '''[[Is]] [[it]] [[going]] [[to]] [[rain]]?'''
 
 ====Translations====
+
+*{{fr}}: [[Va-t-il pleuvoir ?]]
 *{{nl}}: [[Zou het gaan regenen?]] /[[media:Zou_het_gaan_regenen.ogg|zɑʊ hət gaːn regənən?]]/
 
 [[Category:Phrasebook]]
