French: [[merci beaucoup]] <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -7,7 +7,7 @@
 ====Translations====
 *Dutch: [[Heel erg bedankt]] (''[[Media:Heel_erg_bedankt.ogg|hear it]]'')
 *[[Esperanto]]: [[Mi dankegas?]]
-*French: [[Merci bien?]]
+*French: [[merci beaucoup]], [[merci bien]]
 *German: [[Vielen Dank]]
 *Hebrew: [[תודה רבה]] (toda raba)
 *Japanese: [[domo arigato]], [[domo arigato gozai masu]]
