/* Translations */ French: [[joyeux Noël]] <merry Christmas#34405>

--- a/wiki/merry_Christmas.wikitext
+++ b/wiki/merry_Christmas.wikitext
@@ -21,7 +21,7 @@
 *[[Esperanto]]: [[gxojan kristnaskon]]
 *Estonian: [[häid jõule]]
 *Finnish: [[hyvää joulua]]
-*French: [[joyeux noël]]
+*French: [[joyeux Noël]]
 *[[Frisian]]: [[noflike krystdagen]]
 *German: [[fröhliche Weihnachten]]
 *[[Hawaiian]]: [[mele kalikimaka]]
