--- a/wiki/thanks.wikitext
+++ b/wiki/thanks.wikitext
@@ -22,6 +22,7 @@
 *[[French]]: [[merci]] ''m'', [[remerciement]] ''m'' (1), [[merci]] (2)
 *[[German]]: [[Dank]] ''m'' (1), [[danke]] (2)
 *[[Greek]]: [[ευχαριστώ]] eucharisto (efcharist&oacute;), [[eucharistos]]
+*{{hi}}: [[शुक्रिया]] [[:hi:शुक्रिया]], [[धन्यवाद]] [[:hi:धन्यवाद]] (very formal)
 *[[Japanese]]: [[ありがとう]] (arigatô)
 *[[Polish]]: [[dziękuję]]
 *[[Portuguese]]: [[obrigado]]
