--- a/wiki/%E9%BD%8A.wikitext
+++ b/wiki/%E9%BD%8A.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[齐]]
+* '''Alternate form''': [[齐]], [[斉]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 210''': [[Wiktionary:Chinese radical index 齊|齊]]+0 stroke
 
