--- a/wiki/%E9%BD%90.wikitext
+++ b/wiki/%E9%BD%90.wikitext
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,30 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[齊]]
+
+===Compounds===
+*[[齐备]]
+*[[齐步走]]
+*[[齐唱]]
+*[[齐齿呼]]
+*[[齐楚]]
+*[[齐集]]
+*[[齐兼]]
+*[[齐截]]
+*[[齐眉穗儿]]
+*[[齐名]]
+*[[齐全]]
+*[[齐射]]
+*[[齐声]]
+*[[齐刷刷]], [[齐刷刷的]]
+*[[齐头]]
+*[[齐头并进]]
+*[[齐心]]
+*[[齐心协力]]
+*[[齐一]]
+*[[齐崭崭]], [[齐展展]]
+*[[齐整]]
+*[[齐奏]]
 
 * '''Other info''': 
 
