--- a/wiki/%E5%8C%97.wikitext
+++ b/wiki/%E5%8C%97.wikitext
@@ -24,7 +24,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -36,11 +36,47 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': baak1, bak1
 
+===Compounds===
+*[[北半球]]
+*[[北边]], [[北边儿]]
+*[[北部]]
+*[[北辰]]
+*[[北斗星]]
+*[[北豆腐]]
+*[[北伐战争]]
+*[[北方]]
+*[[北方话]]
+*[[北瓜]]
+*[[北国]]
+*[[北寒带]]
+*[[北回归线]]
+*[[北货]]
+*[[北极]]
+*[[北极光]]
+*[[北极狐]]
+*[[北极圈]]
+*[[北极星]]
+*[[北极熊]]
+*[[北郊]]
+*[[北京]]
+*[[北京时间]]
+*[[北京猿人]]
+*[[北路梆子]]
+*[[北冕座]]
+*[[北面]], [[北面儿]]
+*[[北欧]]
+*[[北曲]]
+*[[北上]]
+*[[北天极]]
+*[[北纬]]
+*[[北温带]]
+*[[北洋]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ほく]] (hoku), [[はい]] (hai)
@@ -57,6 +93,12 @@
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': buk, be
 ** '''[[McCune-Reischauer]]''': puk, pe
+
+----
+
+==Vietnamese==
+
+* bắc
 
 ----
 
