--- a/wiki/%E9%9B%BE.wikitext
+++ b/wiki/%E9%9B%BE.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': fog, mist, vapor, fine spray
+* '''Common Meaning''': [[fog]], [[mist]], [[vapour]], fine [[spray]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,14 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[霧]]
+
+===Compounds===
+*[[雾沉沉]], [[雾沉沉的]]
+*[[雾化]]
+*[[雾里看花]]
+*[[雾茫茫]], [[雾茫茫的]]
+*[[雾气]]
+*[[雾腾腾]], [[雾腾腾的]]
 
 * '''Other info''': 
 
