fmt; "nickname" -> "short form"; typo ("transrations") <Matthew#66032>

--- a/wiki/Matthew.wikitext
+++ b/wiki/Matthew.wikitext
@@ -2,8 +2,8 @@
 ===Proper noun===
 '''Matthew'''
 
-# male given name. nickname: [[Matt]].
+#A male given name.  Short form: [[Matt]].
 
-===Transrations===
+====Translations====
 *French: [[Matthieu]]
 *Italian: [[Matteo]]
