--- a/wiki/Matthew.wikitext
+++ b/wiki/Matthew.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Matthew'''
 
-#A male given name.  Short form: [[Matt]].
+#A male [[given name]].  Short form: [[Matt]].
 
 ====Translations====
 *French: [[Matthieu]]
