adv -> adj; fmt <state of the art#65994>

--- a/wiki/state_of_the_art.wikitext
+++ b/wiki/state_of_the_art.wikitext
@@ -1,9 +1,11 @@
 ==English==
-===Adverb===
-'''state-of-the-art'''
-#A property of being at the highest level of development at a particular time; [[progressive]];
-#:state-of-the-art technology
+===Adjective===
+'''state of the art''' (''after the noun''), '''state-of-the-art''' (''before the noun'')
+
+#At the highest level of development at a particular time; [[progressive]].
+#:''state-of-the-art technology''
 
 ===Noun===
-[[state of the art]]
-#The highest level of development at a particular time
+'''state of the art'''
+
+#The highest level of development at a particular time.
