fmt <EE. UU.#66011>

--- a/wiki/EE._UU..wikitext
+++ b/wiki/EE._UU..wikitext
@@ -1,3 +1,5 @@
 ==Spanish==
 ===Abreviation===
-#'''Estados Unidos ([[United States]])'''
+'''EE. UU.'''
+
+#(''abbreviation of'' '''[[Estados Unidos]]''') [[US]], [[USA]]
