--- a/wiki/%E6%95%A2.wikitext
+++ b/wiki/%E6%95%A2.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*# to dare, venture
-*# bold, brave
+*# to [[dare]], [[venture]]
+*# [[bold]], [[brave]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,32 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gam2
 
+===Compounds===
+*[[敢保]]
+*[[敢当]]
+*[[敢怒而不敢言]]
+*[[敢情]]
+*[[敢请]]
+*[[敢是]]
+*[[敢死队]]
+*[[敢问]]
+*[[敢于]]
+*[[敢作敢当]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
 ** '''[[Kun]]''': [[あえて]] (aete)
+
+===Compounds===
+*[[敢行]]
+*[[敢然]]
+*[[敢闘]]
 
 * '''Other info''':  
 
