+"f" to fem plural and moved this first (this is the more common plural) <orecchio#65992>

--- a/wiki/orecchio.wikitext
+++ b/wiki/orecchio.wikitext
@@ -1,8 +1,8 @@
 ==Italian==
 ===Noun===
-'''orecchio''' ''m'' (''plural'' [[orecchi]], [[orecchie]])
+'''orecchio''' ''m'' (''plural'' [[orecchie]] ''f'', [[orecchi]])
 
-# [[ear]]
+#[[ear]] (''anatomy'')
 
 ===Related terms===
 *[[orecchia]]
