amended text from that copied from a book; fmt; +Wikipedia link (article does not exist yet); var sp <Arvak#66007>

--- a/wiki/Arvak.wikitext
+++ b/wiki/Arvak.wikitext
@@ -1,3 +1,12 @@
-'''Bold text'''The proper name is ARVAKYR, He's the horse that pulls the sun up each morning( his brother Alsvitr pulls the sun afterwards); Ar= early...;vakyr(vakr)=wake.
+==English==
+===Proper noun===
+'''Arvaker'''
 
-      p.p. 67-68 gods of the north,Brian Branston,Thames&Hudson,N.Y,N.Y.
+====Variant spellings====
+*[[Arvak]]
+
+#In [[Norse]] [[mythology]], one of the two horses drawing the [[chariot]] bearing the sun.
+
+===See also===
+*[[Allsvinn]]<!--there seem to be various spellings here too, including "Alsvidh" and possibly "Alsvitr"-->
+*[[w:Arvaker|Wikipedia article on Arvaker]]
