--- a/wiki/adjetivo.wikitext
+++ b/wiki/adjetivo.wikitext
@@ -1,3 +1,3 @@
 ==[[Spanish]]==
 ===Noun===
-[[adjetivo]] #[Gram.] [[adjective]]
+[[adjetivo]] #[Gram.] [[adjective]], A word that [[modify|modifies]] or [[describe]]s a noun or pronoun.
