--- a/wiki/adjectivo.wikitext
+++ b/wiki/adjectivo.wikitext
@@ -1,14 +1,10 @@
-----
-
 ==[[Romanica]]==
 ===Adjective===
-<b>[[adjectivo]] ''m'', [[adjectiva]] ''f''</b>
+'''adjectivo''' ''m'', '''[[adjectiva]]''' ''f''
+
 #[Gram.] [[adjective]], [[adjectival]]
-----
 
-==[[Romanica]]==
 ===Noun===
-<b>adjectivo</b> ''m''
+'''adjectivo''' ''m''
 #[Gram.] [[adjective]]
-
 [[nl:adjectivo]]
