--- a/wiki/cinque.wikitext
+++ b/wiki/cinque.wikitext
@@ -1,4 +1,7 @@
 ==Italian==
+===Etymology===
+from Latin [[quinque]]
+
 ===Cardinal Number===
 '''cinque'''
 
@@ -9,10 +12,3 @@
 '''cinque'''
 
 # [[five]]
-
-----
-'''Translations'''
-
-*[[French]]: [[cinq]]
-*[[Greek]]: [[pente]]
-*[[Latin]]: [[quinque]]
