--- a/wiki/adjetivo.wikitext
+++ b/wiki/adjetivo.wikitext
@@ -1,3 +1,5 @@
-==[[Spanish]]==
+==Spanish==
 ===Noun===
-[[adjetivo]] #[Gram.] [[adjective]], A word that [[modify|modifies]] or [[describe]]s a noun or pronoun.
+'''adjetivo'''
+
+#[Gram.] [[adjective]], A word that [[modify|modifies]] or [[describe]]s a noun or pronoun.
