fmt; corrected Italian; translation tables; +fr: <bless you#39609>

--- a/wiki/bless_you.wikitext
+++ b/wiki/bless_you.wikitext
@@ -1,16 +1,35 @@
-===Interjection===
-'''[[bless]] [[you]]'''
+==English==
+===Interjection phrase===
+'''[[bless]] [[you]]!'''
 
-# Short for &ldquo;may God bless you&rdquo; said as a short prayer for the recipent.
-# Said to somebody who has [[sneeze]]d, as a rhetorical response.
+#Short for '''(may) [[God bless you]]''': said as a short prayer for the recipent.
+#Said to somebody who has [[sneeze]]d, as a rhetorical response.
 
 ====Translations====
-*Esperanto: [[sanon]] (2)
-*Finnish: [[terveydeksi]] (2)
-*German: [[Gesundheit]] (2)
-*Italian: [[filimask]] (2)
-*Polish: [[na zdrowie]] (2)
-*Russian: [[будь здоров]] (2)
-*Slovak: [[na zdravie]] (2)
-*Spanish: [[salud]] (2)
-*Swedish: [[prosit]] (2)
+
+'''short for "God bless you"'''
+''See'' [[God bless you]]
+
+'''said to somebody who has sneezed'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Esperanto: [[sanon]]
+*Finnish: [[terveydeksi]]
+*French: [[à vos souhaits]]! (''formal form''), [[à tes souhaits]]! (''informal form'')
+*German: [[Gesundheit]]!
+*Italian: [[salute#Italian|salute]]!
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Polish: [[na zdrowie]]
+*Russian: [[будь здоров]]
+*Slovak: [[na zdravie]]
+*Spanish: [[salud]]
+*Swedish: [[prosit]]
+|}
+|}
