--- a/wiki/agnosia.wikitext
+++ b/wiki/agnosia.wikitext
@@ -1,3 +1,11 @@
 =={{En}}==
 ===Noun===
 # The loss of ability to recognize familiar objects or people, as a result of damage to the brain.
+
+----
+
+==Italian==
+===Noun===
+'''agnosia''' ''f''
+
+# agnosia
