--- a/wiki/contradiction.wikitext
+++ b/wiki/contradiction.wikitext
@@ -35,7 +35,8 @@
 |- 
 |bgcolor="#FFFFE0" valign=top width=48%| 
 {| 
-<!--languages from A to I go here--> 
+<!--languages from A to I go here-->
+*Finnish: [[ristiriita]]
 *French: contradiction ''f''
 *German: [[Widerspruch]] ''m''
 *Italian: [[contraddizione]] ''f''
@@ -54,7 +55,8 @@
 |- 
 |bgcolor="#FFFFE0" valign=top width=48%| 
 {| 
-<!--languages from A to I go here--> 
+<!--languages from A to I go here-->
+*Finnish: [[ristiriita]] 
 *French: contradiction ''f''
 |} 
 | width=1% | 
