/* Translations */ more fi <contradiction#55188>

--- a/wiki/contradiction.wikitext
+++ b/wiki/contradiction.wikitext
@@ -19,7 +19,8 @@
 |- 
 |bgcolor="#FFFFE0" valign=top width=48%| 
 {| 
-<!--languages from A to I go here--> 
+<!--languages from A to I go here-->
+*Finnish: [[kiistäminen]]
 *French: contradiction ''f''
 *Italian: [[contraddizione]] ''f''
 |} 
