--- a/wiki/contradiction_in_terms.wikitext
+++ b/wiki/contradiction_in_terms.wikitext
@@ -13,5 +13,18 @@
 *[[contradiction]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[sanonnan]] [[ristiriitaisuus]]
 *French: [[contradiction#French|contradiction]] ''f''
 *Italian: [[contraddizione]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
