--- a/wiki/%E6%93%A6.wikitext
+++ b/wiki/%E6%93%A6.wikitext
@@ -28,6 +28,27 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chaat3
 
+===Compounds===
+*[[擦棒球]]
+*[[擦背]]
+*[[擦边]], [[擦边儿]]
+*[[擦边球]]
+*[[擦布]]
+*[[擦黑儿]]
+*[[擦痕]]
+*[[擦磨]]
+*[[擦屁股]]
+*[[擦破]]
+*[[擦拳摩掌]]
+*[[擦伤]]
+*[[擦拭]]
+*[[擦网球]]
+*[[擦洗]]
+*[[擦眼抹泪]]
+*[[擦音]]
+*[[擦澡]]
+*[[擦脂抹粉]]
+
 * '''Other info''': 
 
 ----
