--- a/wiki/deaf.wikitext
+++ b/wiki/deaf.wikitext
@@ -47,6 +47,11 @@
 #Deaf people considered as a group.
 
 ====Translations====
+*French: [[sourd]] ''m''
+*German: [[Taube]] 
+*Italian: [[sordo]] ''m'', [[non udente]] ''m''
+*Russian: [[глухой]] ''m'', [[глухая]] ''f''
+*Spanish: [[sordo]]
 
 '''deaf people considered as a group'''
 {| border=0  width=100%
