/* See also */ +languagehat link <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -29,3 +29,4 @@ From [[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
 *[[切腹]] (seppuku)
 *[[特攻隊]] (tokkōtai)
 *[[腹切]] (hara-kiri)
+*[http://www.languagehat.com/archives/001646.php Discussion of this term on Languagehat, a language blog]
