--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -18,3 +18,4 @@ From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
 *[[seppuku]]
 *[[suicide]]
 *[[w:Kamikaze|Wikipedia article on the kamikaze]]
+*[http://www.languagehat.com/archives/001646.php Discussion of this term on Languagehat, a language blog]
