--- a/wiki/%E6%97%B1.wikitext
+++ b/wiki/%E6%97%B1.wikitext
@@ -11,14 +11,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#[[drought]]
+*# [[drought]]
 *# [[dry]]
 *# dry [[land]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,15 +30,44 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hon5
 
+===Compounds===
+*[[旱冰]]
+*[[旱船]]
+*[[旱道]], [[旱道儿]]
+*[[旱稻]], [[旱稻儿]]
+*[[旱地]]
+*[[旱季]]
+*[[旱井]]
+*[[旱涝]]
+*[[旱涝保收]]
+*[[旱路]]
+*[[旱年]]
+*[[旱桥]]
+*[[旱情]]
+*[[旱伞]]
+*[[旱生植物]]
+*[[旱獭]]
+*[[旱天]]
+*[[旱田]]
+*[[旱象]]
+*[[旱鸭子]]
+*[[旱烟]]
+*[[旱烟袋]]
+*[[旱秧田]]
+*[[旱灾]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
 ** '''[[Kun]]''': [[ひでり]] (hideri)
+
+===Compounds===
+*[[旱魃]]
 
 * '''Other info''':  
 
