--- a/wiki/%E8%84%89.wikitext
+++ b/wiki/%E8%84%89.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': blood vessels, veins, arteries
+* '''Common Meaning''': blood [[vessel]]s, [[vein]]s, [[artery|arteries]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,23 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[脈]]
 
+===Compounds===
+*[[脉搏]]
+*[[脉冲]]
+*[[脉动]]
+*[[脉动电流]]
+*[[脉络]]
+*[[脉络膜]]
+*[[脉息]]
+*[[脉象]]
+*[[脉压]]
+*[[脉脉]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[みゃく]] (myaku), [[ばく]] (baku)
