wikify sanskrit & kannada <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -44,8 +44,8 @@
 *Japanese:
 *:[[あなたの名前はなんですか？]] (anata no namae wa nan desu ka?)
 *Kannada:
-*:(Formal)ನಿಮ್ಮ ಹೆಸರೇನು? (Nimma HesarEnu) 
-*:(Casual)ನಿನ್ನ ಹೆಸರೇನು? (Ninna HesarEnu)
+*:(Formal) [[ನಿಮ್ಮ ಹೆಸರೇನು?]] (Nimma HesarEnu) 
+*:(Casual) [[ನಿನ್ನ ಹೆಸರೇನು?]] (Ninna HesarEnu)
 *[[Marshallese]]: 
 *:[[Etam̧?]] (''Name-your?'')
 *Mongolian:
@@ -54,8 +54,8 @@
 *:(Informal) [[Как тебя зовут?]] (Kak tebya zovut?)
 *:(Formal) [[Как вас зовут?]] (Kak vas zovut?)
 *Sanskrit:
-*:(Formal)भवतः नाम किम्? (bhavathaha naama kim?) 
-*:(Casual)तव नाम किम्? (tava naama kim?)
+*:(Formal) [[भवतः नाम किम्?]] (bhavathaha naama kim?) 
+*:(Casual) [[तव नाम किम्?]] (tava naama kim?)
 *Spanish:
 *:[[¿Cómo se llama Usted?]] (''How do you call yourself?'') (formal), [[¿Como te llamas?]] (casual)
 *:(''literal translation'') [[¿Cuál es su nombre?]] (formal), [[¿Cuál es tu nombre?]] (casual)
