--- a/wiki/pall.wikitext
+++ b/wiki/pall.wikitext
@@ -2,12 +2,14 @@
 
 ===Noun===
 # A heavy [[canvas]].
+====Etymology====
+[[Old English]] [[pæll]] "altar cloth, cloak, covering", from [[Latin]] [[pallium]] "cloak, covering".
 
 ===Verb===
-
 '''to pall'''
 
 #To make vapid or insipid; to make lifeless or spiritless; to dull; to weaken.
-
+====Etymology====
+''become tiresome'' attested [[w:1700|1700]], from [[Middle English]] [[pallen]] ''to grow feeble'' first attested [[w:1390|1390]], aphetic form of [[appallen]] ''to grow faint'' (see [[appal]]).
 ===Related terms===
 * [[tarpaulin]]
