/* Translations */ +moroccan arabic, italian (please check) <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -5,12 +5,14 @@
 # an expression of gratitude
 
 ====Translations====
+*Arabic: (shukran bezzef) (''Moroccan'')
 *Dutch: [[Heel erg bedankt]] (''[[Media:Heel_erg_bedankt.ogg|hear it]]'')
 *[[Esperanto]]: [[Mi dankegas?]]
 *French: [[merci beaucoup]], [[merci bien]]
 *German: [[Vielen Dank]]
 *Hebrew: [[תודה רבה]] (toda raba)
-*Japanese: [[domo arigato]], [[domo arigato gozai masu]]
+*Italian: [[molto grazie]]
+*Japanese: (domo arigato), (domo arigato gozai masu)
 *Spanish: [[Muchas gracias]]
 *Vietnamese: [[Cảm ơn nhiều]], [[Cảm ơn lắm]]
 
