it: entry <nuovo#66100>

--- a/wiki/nuovo.wikitext
+++ b/wiki/nuovo.wikitext
@@ -5,6 +5,6 @@
 #[[new]]
 
 ===Noun===
-'''nuovo''' ''m'' (''f'' '''nuova''', ''m plural'' '''nuovi''', ''f plural'' '''nuove''')
+'''un nuovo''' ''m'' (''f'' '''una nuova''', ''m plural'' '''nuovi''', ''f plural'' '''nuove''')
 
 #a new one
