--- a/wiki/novembre.wikitext
+++ b/wiki/novembre.wikitext
@@ -1,5 +1,16 @@
+==French==
+===Noun===
+'''novembre''' ''m''
+
+#[[November]]
+
+----
+
 ==Italian==
 ===Noun===
 '''novembre''' ''m''
 
 #[[November]]
+[[fr:novembre]]
+[[it:novembre]]
+[[ja:novembre]]
