+extra sense, examples, fr: & it: <contradict#66074>

--- a/wiki/contradict.wikitext
+++ b/wiki/contradict.wikitext
@@ -1,7 +1,11 @@
 ==English==
 ===Verb===
-'''to contradict'''
-#Deny truth of opponent's statement.
+'''to contradict''' ('''contradicting''', '''contradicted''', '''contradicted''')
+
+#To deny the truth of (a statement or statements).
+#:''His testimony contradicts hers.''
+#To make a statement denying the truth of the statement(s) made by (a person).
+#:''Everything he says contradicts me.''
 
 ====Translations====
 {| border=0 width=100%
@@ -9,7 +13,9 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*French: [[contradire#French|contradire]]
 *Finnish: [[kiistää]]
+*Italian: [[contradire#Italian|contradire]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
