--- a/wiki/normale.wikitext
+++ b/wiki/normale.wikitext
@@ -1,5 +1,13 @@
 ==Italian==
 ===Adjective===
+'''normale''' ''f''
+
+# feminine of [[normal#French|normal]], [[normal]]
+
+----
+
+==Italian==
+===Adjective===
 '''normale''' ''m and f'' (''m and f plural'' '''normali''')
 
 #[[normal]]
