+vi & more rel <finire#66048>

--- a/wiki/finire.wikitext
+++ b/wiki/finire.wikitext
@@ -1,8 +1,14 @@
 ==Italian==
-===Verb===
+===Transitive verb===
 '''finire'''
 
-# to [[finish]]
+#to [[finish]]
+
+===Intransitive verb===
+'''finire'''
+#to [[finish]], to [[end]]
 
 ===Related terms===
 *[[fine]]
+*[[finito]]
+*[[finizione]]
