--- a/wiki/normal.wikitext
+++ b/wiki/normal.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Adjective===
 '''normal'''
 
-# according to norms or rules
+# according to [[norm]]s or rules
 #: ''Organize the data into third normal form.''
 # usual; ordinary
 #: ''Felicia baked the bread the normal way.''
@@ -25,3 +26,20 @@ From Latin '''[[normalis]]'''
 *[[normalcy]]
 *[[normally]]
 *[[subnormal]]
+
+----
+
+==French==
+===Adjective===
+'''normal''' ''m singular'' (''f'' [[normale]], ''m plural'' [[normaux]], ''f plural'' [[normales]]
+
+# normal
+
+===Antonym===
+*[[anormal]]
+
+===Related terms===
+*[[normalement]]
+*[[normalisation]]
+*[[normalité]]
+*[[norme]]
