--- a/wiki/normal.wikitext
+++ b/wiki/normal.wikitext
@@ -31,7 +31,7 @@ From Latin '''[[normalis]]'''
 
 ==French==
 ===Adjective===
-'''normal''' ''m singular'' (''f'' [[normale]], ''m plural'' [[normaux]], ''f plural'' [[normales]]
+'''normal''' ''m singular'' (''f'' [[normale]], ''m plural'' [[normaux]], ''f plural'' [[normales]])
 
 # normal
 
