--- a/wiki/sto.wikitext
+++ b/wiki/sto.wikitext
@@ -2,7 +2,7 @@
 ===Verb form===
 '''sto'''
 
-#(''[[first-person]] singular [[indicative]] present tense of'' '''[[stare#Italian|stare]]''') [[am]]
+#(''[[first-person]] singular [[indicative]] present tense of'' '''[[stare#Italian|stare]]''') (I) [[am]], [[I'm]]
 
 ===Demonstrative pronoun===
 '''sto'''
@@ -10,10 +10,10 @@
 #(''dialect form of'' '''[[questo]]''') [[this]]
 
 ===See also===
-*[[stai]]
 *[[sta]]
+*[[stai]]
+*[[stanno]]
+*[[state#Italian|state]]
 *[[ste]]
 *[[sti]]
 *[[stiamo]]
-*[[state#Italian|state]]
-*[[stanno]]
