/* Verb form */ <stai#66104>

--- a/wiki/stai.wikitext
+++ b/wiki/stai.wikitext
@@ -2,7 +2,7 @@
 ===Verb form===
 '''stai'''
 
-#(''[[second-person]] singular [[indicative]] present tense of'' '''[[stare#Italian|stare]]''') [[are]], [[art]] (''archaic'')
+#(''[[second-person]] singular [[indicative]] present tense of'' '''[[stare#Italian|stare]]''') (you) [[are]], [[you're]], (thou) [[art]] (''archaic'')
 
 ===See also===
 *[[sta]]
