/* Translations */ wikify kannada and sanskrit <my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -40,7 +40,7 @@
 *:[[私は...です]] (わたしは...です, watashi wa ... desu) ''I'm ...''
 *:(''literal translation'') [[私の名前は...です]] (わたしのなまえは...です, watashi no namae wa ... desu)
 *Kannada:
-*:ನನ್ನ ಹೆಸರು...  (nanna Hesaru)
+*:[[ನನ್ನ ಹೆಸರು...]] (nanna Hesaru)
 *[[KiSwahili]]:
 *:[[Jina langu ni ...]]
 *:[[Naitwa ...]]
@@ -57,7 +57,7 @@
 *Russian:
 *:[[Меня зовут ...]] (Menya zovut ...)
 *Sanskrit:
-*:मम नाम... (Mama Naama)
+*:[[मम नाम...]] (Mama Naama)
 *Spanish:
 *:[[Me llamo ...]] ''I call myself ...''
 *:(''literal translation'') Mi nombre es ...
