noun -> interjection! but the preposition def is a noun! it's def is wrong however; remove inline interwikis; translation must be re-checked <thanks#33788>

--- a/wiki/thanks.wikitext
+++ b/wiki/thanks.wikitext
@@ -1,46 +1,50 @@
+==English==
 ===Pronunciation===
 *[[w:IPA|IPA]]: /θæŋks/
-*[[w:SAMPA|SAMPA]]: /T{Nks/
+*[[w:SAMPA|SAMPA]]: /<tt>T{Nks</tt>/
 
 ===Etymology===
 :Old English ''thanc'' (thought, gratitude) of Germanic origin
 
-===Noun===
+===Interjection===
+'''thanks!'''
 
 # An expression of appreciation (''to give thanks'', ''to owe thanks'', ''to receive thanks'')
 # (Almost as an interjection, but still able to take a qualifying adjective) Thank you (''thanks'', ''many thanks'', ''thanks a lot'')
 
+<!-- these translations were added when the part-of-speech above was wrongly claimed to be "noun" - some may need to be changed. &mdash; [[User:Hippietrail|Hippietrail]] 14:51, 23 Nov 2004 (UTC) -->
 ====Translations====
 *[[Albanian]]: [[faleminderit]] (2)
-*[[Arabic]]: [[شكرا]] (shukran) (2)
-*[[Chinese]] (Mandarin): traditional [[謝謝]], simplified [[谢谢]] (xièxie)
-*[[Chinese]] (Cantonese): [[唔該]] (mgoi)
-*[[Czech]]: [[díky]]
-*[[Dutch]]: [[dank]] ''m'' (1), [[bedankt]] (2)
+*Arabic: [[شكرا]] (shukran) (2)
+*Chinese ([[Mandarin]]): traditional [[謝謝]], simplified [[谢谢]] (xièxie)
+*Chinese ([[Cantonese]]): [[唔該]] (mgoi)
+*Czech: [[díky]]
+*Dutch: [[dank]] ''m'' (1), [[bedankt]] (2)
 *[[Esperanto]]: [[dankon]]
-*[[Finnish]]: [[kiitos]]
-*[[French]]: [[merci]] ''m'', [[remerciement]] ''m'' (1), [[merci]] (2)
-*[[German]]: [[Dank]] ''m'' (1), [[danke]] (2)
-*[[Greek]]: [[ευχαριστώ]] eucharisto (efcharist&oacute;), [[eucharistos]]
-*{{hi}}: [[शुक्रिया]] [[:hi:शुक्रिया]], [[धन्यवाद]] [[:hi:धन्यवाद]] (very formal)
-*[[Japanese]]: [[ありがとう]] (arigatô)
-*[[Polish]]: [[dziękuję]]
-*[[Portuguese]]: [[obrigado]]
-*[[Romanian]]: [[mulţumiri]] ''f, pl'', [[mulţumesc]] ''n'' (2), [[mersi]] ''n'' (2)
-*[[Russian]]: [[спасибо]] (spasíbo)
-*[[Slovak]]: [[vďaka]]
-*[[Slovene]]: [[hvala]] (2)
-*[[Spanish]]: [[gracias]]
+*Finnish: [[kiitos]]
+*French: [[merci]] ''m'', [[remerciement]] ''m'' (1), [[merci]] (2)
+*German: [[Dank]] ''m'' (1), [[danke]] (2)
+*Greek: [[ευχαριστώ]] eucharisto (efcharist&oacute;), [[eucharistos]]
+*{{hi}}: [[शुक्रिया]], [[धन्यवाद]] (very formal)
+*Japanese: [[ありがとう]] (arigatô)
+*Polish: [[dziękuję]]
+*Portuguese: [[obrigado]]
+*Romanian: [[mulţumiri]] ''f, pl'', [[mulţumesc]] ''n'' (2), [[mersi]] ''n'' (2)
+*Russian: [[спасибо]] (spasíbo)
+*Slovak: [[vďaka]]
+*Slovene: [[hvala]] (2)
+*Spanish: [[gracias]]
 
-===Preposition===
+===Noun===
+'''thank''' ([[thanks]])
 
 # '''thanks to'''. As a result of: ''Much was saved, thanks to the firemen's quick response.''
 
+<!-- these translations were added when the part-of-speech above was wrongly claimed to be "preposition" - some may need to be changed. &mdash; [[User:Hippietrail|Hippietrail]] 14:51, 23 Nov 2004 (UTC) -->
 ====Translations====
-
-*[[Dutch]]: [[dankzij]]
+*Dutch: [[dankzij]]
 *[[Esperanto]]: [[dank' al]]
-*[[German]]: [[dank]], [[wegen]]
+*German: [[dank]], [[wegen]]
 *Latin: [[ob]], [[propter]]
-*[[Slovak]]: [[vďaka]]
+*Slovak: [[vďaka]]
 *Spanish: [[gracias a]]
