--- a/wiki/ai.wikitext
+++ b/wiki/ai.wikitext
@@ -6,6 +6,8 @@
 ===Homophones===
 *[[hai#Italian|hai]]
 
+----
+
 == Japanese [[Romaji]] ==
 '''ai''' ([[愛]], [[あい]])
 
@@ -28,3 +30,9 @@
 '''ai (laidio)''' 
 
 # [[forever]]
+
+----
+
+==Vietnamese==
+
+#[[who]]
