fixed it ("molto" is an adjective, but "tanto" is more often used; after the noun it is an adverb); decapitalised es:; +gr: <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -10,10 +10,11 @@
 *[[Esperanto]]: [[Mi dankegas?]]
 *French: [[merci beaucoup]], [[merci bien]]
 *German: [[Vielen Dank]]
+*Greek, Modern: [[ευχαριστώ πολύ]]
 *Hebrew: [[תודה רבה]] (toda raba)
-*Italian: [[molto grazie]]
+*Italian: [[tante grazie]], [[grazie molto]]
 *Japanese: (domo arigato), (domo arigato gozai masu)
-*Spanish: [[Muchas gracias]]
+*Spanish: [[muchas gracias]]
 *Vietnamese: [[Cảm ơn nhiều]], [[Cảm ơn lắm]]
 
 
