/* Translations */ cjk++ <jade#47458>

--- a/wiki/jade.wikitext
+++ b/wiki/jade.wikitext
@@ -5,7 +5,7 @@
 # a green semiprecious stone
 
 ====Translations====
-*Chinese Characters: [[玉]]; [[珹]]; [[瑭]]
+*CJK Characters: [[玉]]; [[珹]]; [[瑭]]; [[琁]]
 *Chinese: [[玉]] (yù), [[翡翠]] (feicui)
 *Finnish: jade
 *German: Jade ''f''
