decapitalised de: (assuming "vielen" is an adjective) <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -9,7 +9,7 @@
 *Dutch: [[Heel erg bedankt]] (''[[Media:Heel_erg_bedankt.ogg|hear it]]'')
 *[[Esperanto]]: [[Mi dankegas?]]
 *French: [[merci beaucoup]], [[merci bien]]
-*German: [[Vielen Dank]]
+*German: [[vielen Dank]]
 *Greek, Modern: [[ευχαριστώ πολύ]]
 *Hebrew: [[תודה רבה]] (toda raba)
 *Italian: [[tante grazie]], [[grazie molto]]
