modified def (stronger than "thank you" or "thanks") <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -2,7 +2,7 @@
 ===Expression===
 '''[[many]] [[thanks]]'''
 
-# an expression of gratitude
+#An expression of gratitude, expressing greater gratitude than [[thank you]] or [[thanks]].
 
 ====Translations====
 *Arabic: (shukran bezzef) (''Moroccan'')
@@ -16,6 +16,5 @@
 *Japanese: (domo arigato), (domo arigato gozai masu)
 *Spanish: [[muchas gracias]]
 *Vietnamese: [[Cảm ơn nhiều]], [[Cảm ơn lắm]]
-
 
 [[Category:Phrasebook]]
