--- a/wiki/ra.wikitext
+++ b/wiki/ra.wikitext
@@ -1,3 +1,14 @@
-'''Ra'''<br>(''chemistry'') symbol for [[radium]]
+'''Ra'''
+
+(''chemistry'') symbol for [[radium]]
+
+----
+
+==Vietnamese==
+===Verb===
+'''ra'''
+
+# [[go out]], [[leave]]
+# go northwards
 
 [[pl:ra]]
