--- a/wiki/Adam.wikitext
+++ b/wiki/Adam.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-#The name given in the [[Bible]] to the first man, the [[progenitor]] of the [[human race]].
+#The name given in the [[Bible]] and the [[Koran]] to the first man, the [[progenitor]] of the [[human race]].
 #"[[Original sin]];" human frailty.
 
 ====See Also====
