--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -115,3 +115,4 @@ Many modern students have made the mistake of thinking that since much of Zen so
 [[pl:Zen]]
 [[pt:Zen]]
 [[zh:&#31109;&#23447;]]
+[[Category:Branches of Buddhism]]
