--- a/wiki/pith.wikitext
+++ b/wiki/pith.wikitext
@@ -5,3 +5,18 @@
 '''pith'''
 
 #The soft spongy substance in the center of the stems of many plants and trees.
+#The essential or vital part of an idea or theory or something else.
+#: the pith of my idea is ...
+#Strength; vigor; energy;
+#: to be full of pith
+
+====Synonyms====
+[[center]]; [[core]]; [[essence]]; [[gist]]; [[inwardness]]; [[kernel]]; [[general tenor]]; [[heart and soul]]; [[heart]; [[marrow]]; [[meat]]; [[nitty-gritty]]; [[nub]]; [[substance]]; [[sum]]; [[essence]]; [[quintessence]]; [[soul]]; [[spirit]]; [[stuff]]
+
+===Verb===
+
+'''to pith'''
+
+#To extract the pith from a plant [[stem]] or tree.
+#To insert a needle into the vertebral canal so as to kill an animal ([[laboratory animal]]).
+#To kill (especially [[cattle]]) by cutting or piercing  the [[spinal cord]].
