--- a/wiki/pith.wikitext
+++ b/wiki/pith.wikitext
@@ -10,8 +10,11 @@
 #Strength; vigor; energy;
 #: to be full of pith
 
+====Etymology====
+[[Old English]] [[piþa]] ''plant pith'' or ''gist'' from [[West Germanic]] [[pithan-]]. The verb meaning ''to kill by cutting or piercing the spinal cord'' attested [[w:1805|1805]].
+
 ====Synonyms====
-[[center]]; [[core]]; [[essence]]; [[gist]]; [[inwardness]]; [[kernel]]; [[general tenor]]; [[heart and soul]]; [[heart]; [[marrow]]; [[meat]]; [[nitty-gritty]]; [[nub]]; [[substance]]; [[sum]]; [[essence]]; [[quintessence]]; [[soul]]; [[spirit]]; [[stuff]]
+[[center]]; [[core]]; [[essence]]; [[gist]]; [[inwardness]]; [[kernel]]; [[general tenor]]; [[heart and soul]]; [[heart]]; [[marrow]]; [[meat]]; [[nitty-gritty]]; [[nub]]; [[substance]]; [[sum]]; [[essence]]; [[quintessence]]; [[soul]]; [[spirit]]; [[stuff]]
 
 ===Verb===
 
