--- a/wiki/%E8%85%90.wikitext
+++ b/wiki/%E8%85%90.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#rot, decay, spoil
-*# rotten
+*# [[rot]], [[decay]], [[spoil]]
+*# [[rotten]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,11 +33,15 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ふ]] (fu)
 ** '''[[Kun]]''': [[くさる]] (kusaru)
+
+===Compounds===
+*[[腐食]]
+*[[腐敗]]
 
 * '''Other info''':  
 
@@ -71,3 +75,4 @@
 * '''Big5''':
 ** Hex: BB47
 ** Decimal: 47943
+[[ja:腐]]
