--- a/wiki/po.wikitext
+++ b/wiki/po.wikitext
@@ -38,5 +38,5 @@
 
 ===Translations===
 *[[English]]: [[backside]], [[buttocks]]
-*[[French]]: [[derriére]]
+*[[French]]: [[derrière]]
 *Indonesian: [[pantat]]
