--- a/wiki/head.wikitext
+++ b/wiki/head.wikitext
@@ -28,7 +28,7 @@ Related Germanic words are old German ''houbit'' (Haupt), middle Dutch ''h&ocirc
 <!--languages from A to I go here-->
 *[[Basque]]: [[buru]], [[kasko]]
 *[[Breton]]: [[penn]] ''m'' -où ''pl''
-*[[Catalan]]: [[cap]] ''m''
+*[[Catalan]]: [[cap]] ''m'' [[:ca:cap|(ca)]] 
 *Chinese: [[頭]]/[[头]] (tou), [[頭腦]]/[[头脑]] (tounao)
 *[[Dutch]]: [[hoofd]] (of person or horse), [[kop]] (of animal)
 *[[Estonian]]: [[pea#Estonian|pea]]
