--- a/wiki/main.wikitext
+++ b/wiki/main.wikitext
@@ -64,10 +64,7 @@ Middle English [[mayn]], ''main'', from Old English [[mægen]], "strength", from
 
 ===Noun===
 '''main''' ''f''
-# Hand.
+# [[Hand]].
 
 ===Synonyms===
 [[louche]], [[mimine]], [[paluche]], [[pince]]
-
-===Translations===
-''see under'' '''[[hand]]'''
