--- a/wiki/stupido.wikitext
+++ b/wiki/stupido.wikitext
@@ -1,6 +1,20 @@
 ==Italian==
 ===Adjective===
-#stupid
+'''stupido'''
+
+#[[stupid]]
+
 ===Noun===
-#stupid; fool;
+'''stupido''' ''m''
+
+#[[stupid]]; [[fool]];
 #:Non fare lo stupido! -- Don't be like a fool!
+
+===Related terms===
+*[[istupidimento]]
+*[[stupidaggine]]
+*[[stupidamente]]
+*[[stupidario]]
+*[[stupidata]]
+*[[stupidità]]
+*[[stupire]]
