--- a/wiki/eye.wikitext
+++ b/wiki/eye.wikitext
@@ -34,7 +34,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 *[[Basque]]: [[begi]]
 *[[Breton]]: [[lagad]] ''m'', ''plural'' daoulagad
 *Bulgarian: [[око]] ''n''
-*[[Catalan]]: [[ull]] ''m''
+*[[Catalan]]: [[ull]] ''m'' [[:ca:ull|(ca)]] [1]
 *Chinese: [[眼睛]] (yǎnjīng)
 *Czech: [[oko#Czech|oko]] ''n''
 *Danish: [[øje]] ''n''
@@ -43,7 +43,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 *Finnish: [[silmä]]
 *French: [[œil]] ''m'', plural [[yeux]]
 *[[Frisian]]: [[each#Frisian|each]]
-*German: [[Auge]] ''n''
+*German: [[Auge]] ''n'' [[:de:Auge|(de)]] [1]
 *Greek: [[μάτι]] ''n'', [[οφθαλμός]] ''m''
 *[[Guaraní]]: [[esa]] (t-)
 *Hungarian: [[szem]]
