--- a/wiki/plastic.wikitext
+++ b/wiki/plastic.wikitext
@@ -3,6 +3,8 @@ The common sense of ''plastic'' as a material was derived by shortening the term
 ==Noun==
 # a stiff but usually slightly flexible synthetic material, generally consisting of a hydrocarbon-based [[polymer]].
 # any similar synthetic material.
+# capable of adapting to varying conditions: <ecologically plastic animals>,see Charles Darwin: The Origin of Species
+
 ==Adjective==
 # of or pertaining to the inelastic deformation of a material.
 # constructed of ''plastic''.
