--- a/wiki/plastic.wikitext
+++ b/wiki/plastic.wikitext
@@ -1,5 +1,9 @@
 ==Etymology==
+
+Latin plasticus of molding, from Greek plastikos, from plassein to mold, form
+
 The common sense of ''plastic'' as a material was derived by shortening the term ''thermoplastic'', a term used to describe that subset of common ''plastics'' that soften when heated.  (The other major subset of ''plastics'' is the ''thermosetting'' plastics, [[Bakelite]] being the best known example.
+
 ==Noun==
 # a stiff but usually slightly flexible synthetic material, generally consisting of a hydrocarbon-based [[polymer]].
 # any similar synthetic material.
