--- a/wiki/lip.wikitext
+++ b/wiki/lip.wikitext
@@ -16,6 +16,7 @@
 ====Translations====
 *Arabic: [[شّفة]]
 *Basque: [[ezpain]]
+*Catalan: [[llavi]] ''m'' [[:ca:llavi|(ca)]] (1)
 *Chinese Characters: [[嘴]]
 *Chinese: [[嘴唇]]
 *Dutch: lip ''f'' (1,2,4), [[rand]] ''m'' (3), [[onbeschaamdheid]] ''f'' (5), [[brutaliteit]] ''f'' (5)
