--- a/wiki/lip.wikitext
+++ b/wiki/lip.wikitext
@@ -22,7 +22,7 @@
 *Dutch: lip ''f'' (1,2,4), [[rand]] ''m'' (3), [[onbeschaamdheid]] ''f'' (5), [[brutaliteit]] ''f'' (5)
 *Esperanto: [[lipo]]
 *French: [[lèvre]] ''f''
-*German: [[Lippe]] ''f'' (1, 2), [[Lefze]] ''f'' (1, of an animal), [[Rand]] ''m'' (3, 4), [[Unverschämtheit]] ''f'' (5)
+*German: [[Lippe]] ''f'' [[:de:Lippe|(de)]] (1, 2), [[Lefze]] ''f'' (1, of an animal), [[Rand]] ''m'' (3, 4), [[Unverschämtheit]] ''f'' (5)
 *Latin: [[labium]] ''n''
 *Slovene: [[ustnica]] ''f'' (1), [[ustna]] ''f'' (1, literary)
 *Spanish: [[labio]] ''m''
