--- a/wiki/plastic.wikitext
+++ b/wiki/plastic.wikitext
@@ -7,7 +7,7 @@ The common sense of ''plastic'' as a material was derived by shortening the term
 ==Noun==
 # a stiff but usually slightly flexible synthetic material, generally consisting of a hydrocarbon-based [[polymer]].
 # any similar synthetic material.
-# capable of adapting to varying conditions: <ecologically plastic animals>,see Charles Darwin: The Origin of Species
+# Capable of adapting to varying conditions: ecologically plastic animals,see Charles Darwin: Origin of Species[http://en.wikipedia.org/wiki/Origin_of_Species]
 
 ==Adjective==
 # of or pertaining to the inelastic deformation of a material.
