<to hell in a handbasket#512952>

--- a/wiki/to_hell_in_a_handbasket.wikitext
+++ b/wiki/to_hell_in_a_handbasket.wikitext
@@ -1,4 +1,4 @@
-'''Going to Hell in a handbasket''' is a way of saying something or a situation is quickly degrading without effort or with great haste.
+'''Going to Hell in a handbasket''' is a way of saying something or a situation is quickly taking a turn for the worse without effort or with great haste.
 
 This term dates back to at least 1941, but its origins, albeit scarce in documentation, date back even further to 1913 with the term ''to heaven in a handbasket'' or ''to heaven in a wheelbarrow''. Even more abstract references date back to 1714 with a text reading, " Govr said he would give his head in a Handbasket as soon as he would pass it." This seems to suggest that the term in one form or another has been around for quite some time.
 
