modified for idiomaticalness; +fem & pl forms <stupido#66125>

--- a/wiki/stupido.wikitext
+++ b/wiki/stupido.wikitext
@@ -1,14 +1,14 @@
 ==Italian==
 ===Adjective===
-'''stupido'''
+'''stupido''' ''m'' (''f'' '''stupida''', ''m plural'' '''stupidi''', ''f plural'' '''stupide''')
 
 #[[stupid]]
 
 ===Noun===
-'''stupido''' ''m''
+'''stupido''' ''m'' (''plural'' '''stupidi'')
 
-#[[stupid]]; [[fool]];
-#:Non fare lo stupido! -- Don't be like a fool!
+#[[idiot]], [[fool]]
+#:''Non fare lo stupido!'' &ndash; Don't be stupid!, Don't be a idiot!
 
 ===Related terms===
 *[[istupidimento]]
