--- a/wiki/stupido.wikitext
+++ b/wiki/stupido.wikitext
@@ -5,7 +5,7 @@
 #[[stupid]]
 
 ===Noun===
-'''stupido''' ''m'' (''plural'' '''stupidi'')
+'''stupido''' ''m'' (''plural'' '''stupidi''')
 
 #[[idiot]], [[fool]]
 #:''Non fare lo stupido!'' &ndash; Don't be stupid!, Don't be a idiot!
