fmt; cleaned up syns; deleted one of two near-identical v senses <pith#60747>

--- a/wiki/pith.wikitext
+++ b/wiki/pith.wikitext
@@ -1,25 +1,22 @@
 ==English==
+===Etymology===
+[[Old English]] ''[[piþa]]'', plant pith, gist, from [[West Germanic]] ''[[pithan-]]''; the verb meaning ''to kill by cutting or piercing the spinal cord'' is attested 1805.
 
 ===Noun===
+'''pith''' (''[[uncountable]]'')
 
-'''pith'''
-
-#The soft spongy substance in the center of the stems of many plants and trees.
-#The essential or vital part of an idea or theory or something else.
-#: the pith of my idea is ...
-#Strength; vigor; energy;
-#: to be full of pith
-
-====Etymology====
-[[Old English]] [[piþa]] ''plant pith'' or ''gist'' from [[West Germanic]] [[pithan-]]. The verb meaning ''to kill by cutting or piercing the spinal cord'' attested [[w:1805|1805]].
+#The soft [[spongy]] substance in the center of the stems of many plants and trees.
+#(''figuratively'') The essential or vital part of an idea or theory or something else.
+#:''the pith of my idea is ...''
+#Strength; vigor.
+#:''to be full of pith''
 
 ====Synonyms====
-[[center]]; [[core]]; [[essence]]; [[gist]]; [[inwardness]]; [[kernel]]; [[general tenor]]; [[heart and soul]]; [[heart]]; [[marrow]]; [[meat]]; [[nitty-gritty]]; [[nub]]; [[substance]]; [[sum]]; [[essence]]; [[quintessence]]; [[soul]]; [[spirit]]; [[stuff]]
+*(''essential or vital part''): [[core]], [[essence]], general [[tenor]], [[gist]], [[heart]], [[heart and soul]], [[inwardness]], [[kernel]], [[marrow]], [[meat]], [[nitty-gritty]], [[nub]], [[quintessence]], [[soul]], [[spirit]], [[stuff]], [[substance]]
+*(''strength''): [[drive]], [[energy]], [[go]], [[gusto]], [[spunk]], [[strength]], [[vigor]]/[[vigour]], [[vim]]
 
-===Verb===
+===Transitive verb===
+'''to pith''' ('''pithing''', '''pithed''', '''pithed''')
 
-'''to pith'''
-
-#To extract the pith from a plant [[stem]] or tree.
-#To insert a needle into the vertebral canal so as to kill an animal ([[laboratory animal]]).
-#To kill (especially [[cattle]]) by cutting or piercing  the [[spinal cord]].
+#To extract the pith from (a plant [[stem]] or tree).
+#To kill (especially [[cattle]] or [[laboratory animal]]s) by cutting or piercing the [[spinal cord]].
