--- a/wiki/pith.wikitext
+++ b/wiki/pith.wikitext
@@ -8,7 +8,7 @@
 #The soft [[spongy]] substance in the center of the stems of many plants and trees.
 #(''figuratively'') The essential or vital part of an idea or theory or something else.
 #:''the pith of my idea is ...''
-#Strength; vigor.
+#(''figuratively'') Strength; vigor.
 #:''to be full of pith''
 
 ====Synonyms====
