Noun translations need to be checked <deaf#52816>

--- a/wiki/deaf.wikitext
+++ b/wiki/deaf.wikitext
@@ -47,12 +47,6 @@
 #Deaf people considered as a group.
 
 ====Translations====
-*French: [[sourd]] ''m''
-*German: [[Taube]] 
-*Italian: [[sordo]] ''m'', [[non udente]] ''m''
-*Russian: [[глухой]] ''m'', [[глухая]] ''f''
-*Spanish: [[sordo]]
-
 '''deaf people considered as a group'''
 {| border=0  width=100%
 |-
@@ -63,9 +57,15 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: i [[sordo|sordi]] ''m plural''
+*Italian: i [[sordo|sordi]] ''m plural'', i [[non udente|non udenti]] ''m plural''
 |}
 |}
+
+=====Translations to be checked=====
+These translations are for the noun but are singular and need to be plural or collective.  Would native speakers modify them accordingly and insert them into the table above, deleting this section once it is empty.
+*German: [[Taube]] 
+*Russian: [[глухой]] ''m'', [[глухая]] ''f''
+*Spanish: [[sordo]]
 
 ===Derived terms===
 *[[deaf aid]]
