--- a/wiki/lip.wikitext
+++ b/wiki/lip.wikitext
@@ -23,6 +23,8 @@
 *Esperanto: [[lipo]]
 *French: [[lèvre]] ''f''
 *German: [[Lippe]] ''f'' [[:de:Lippe|(de)]] (1, 2), [[Lefze]] ''f'' (1, of an animal), [[Rand]] ''m'' (3, 4), [[Unverschämtheit]] ''f'' (5)
+*Italian: [[labbro]]
+*Japanese: [[唇]] ([[くちびる]])
 *Latin: [[labium]] ''n''
 *Slovene: [[ustnica]] ''f'' (1), [[ustna]] ''f'' (1, literary)
 *Spanish: [[labio]] ''m''
