--- a/wiki/November.wikitext
+++ b/wiki/November.wikitext
@@ -1,6 +1,6 @@
 ==English==
 *''Month of the Year:'' '''November'''
-**'''Last:''' [[October]]
+**'''Previous:''' [[October]]
 **'''Next:''' [[December]]
 ----
 
