--- a/wiki/accuser.wikitext
+++ b/wiki/accuser.wikitext
@@ -6,8 +6,9 @@ Old English ''[[acuser]]'', ''[[accusour]]'' ; compare Old French ''[[acuseor]]'
 *[[SAMPA]]: //
 ak-KEWZ-uhr
 ===Noun===
-#One who accuses; one who brings a charge of crime or fault.
+#One who accuses; one who brings a charge of crime or fault; Katelyn Kristine Faber
 ----
+
 ==[[French]]==
 ===Transitive verb===
 #to accuse
