First cut at full definition <whomp#65883>

--- a/wiki/whomp.wikitext
+++ b/wiki/whomp.wikitext
@@ -1,1 +1,23 @@
-This is said on the TV show ''Recess''. It is said when bad things happen or occur.
+==English==
+
+===Etymology===
+:Senses related to hitting may be variants of ''whip'', similar to ''whup''.
+:The verb sense meaning "to lack any redeeming quality" was coined on the television show ''Recess'' by a character who wanted a curse word that wouldn't get him in trouble.
+
+===Verb===
+'''whomp''', less commonly '''womp'''
+
+# (''colloquial'') To hit extremely hard.
+#: ''If you don't cut that out, I'm going to whomp you so hard your head will spin!''
+# To completely lack any redeeming quality.
+#: ''I'm sorry, but your plan just whomps.''
+
+===Related Terms===
+*[[this whomps]]
+*[[whomp on]]
+*[[whomp up]]
+
+===See Also===
+*[[suck]] (2)
+*[[whip]] (1)
+*[[whup]] (1)
