--- a/wiki/whomp_on.wikitext
+++ b/wiki/whomp_on.wikitext
@@ -5,3 +5,7 @@
 
 # To assail with overwhelming force; to defeat decisively.
 #: ''The Jayhawks completely whomped on the hapless Nimrods in today's opening-round game.''
+
+===Related Terms===
+*[[on]]
+*[[whomp]]
