--- a/wiki/motel.wikitext
+++ b/wiki/motel.wikitext
@@ -15,3 +15,7 @@
 *[[inn]]
 *[[motor court]]
 *[[w:motel|Wikipedia article on motels]]
+=={{es}}==
+===Noun===
+'''motel'''
+#(''Mexico'') [[Whorehouse]]
